2005-12-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp/base/lapack.h: Fixed bug [1385960]. Although
	the MKL library was detected properly, the IT++ compilation failed
	on files that use `itpp/base/lapack.h'. The patch attached to the
	bug-report fixes this problem.

2005-12-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/specmat.cpp, itpp/base/specmat.h: Cosmetic changes -
	removed e-mail address and updated author's info

	* doc/sourceforge/howto_release_itpp.html: Source of the
	"How to release a new version of IT++" documentation added

2005-12-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.9.0-rc1 released (CVS tag: release-3-9-0-rc1)
	
	* NEWS: Updated for itpp-3.9.0 release
	* configure.ac, doc/doxygen_html.cfg.in, doc/local/index.doc.in,
	doc/local/sources.mk: Changed the HTML main page to automatically
	update the download links based on the PACKAGE_VERSION.

2005-12-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, Makefile.am, INSTALL, doc/local/installation.doc:
	Changed the name of the switch `--disable-html-docs' into
	`--disable-html-doc'

2005-12-16  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/specmat.{h,cpp}: Added real Toeplitz matrices using
	the function toeplitz(mat, mat). Generalized also to be valid for
	non-square matrices.

2005-12-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/channel.cpp, itpp/comm/channel.h: Interface of
	function `set_channel_profile_exponential' changed. Function still
	not implemented.

	* doc/local/installation.doc: Minor cosmetic changes in the
	MSVC++ and MKL part

2005-12-15  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* Updated the documentation on IT++ and MKL setup for MSVC++.
	* Function `kurtosis' renamed to `kurtosisexcess' for MATLAB
	compability and conformance to literature. A new function
	`kurtosis' is defined. 

2005-12-15  Adam Piatyszek  <ediap@users.sourceforge.net>
